emissary-ingress/emissary-config/2_sample_service_cqrs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-cqrs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quote-cqrs
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: quote-cqrs
    spec:
      containers:
        - name: backend
          image: docker.io/datawire/quote:0.5.0
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quote-cqrs
  annotations:
    a8r.io/description: "Quote of the moment service"
    a8r.io/owner: "No owner"
    a8r.io/chat: "#ambassador"
    a8r.io/bugs: "https://github.com/datawire/quote/issues"
    a8r.io/documentation: "https://github.com/datawire/quote/blob/master/README.md"
    a8r.io/repository: "https://github.com/datawire/quote"
    a8r.io/support: "http://a8r.io/Slack"
    a8r.io/runbook: "https://github.com/datawire/quote/blob/master/README.md"
    a8r.io/incidents: "https://github.com/datawire/quote/issues"
    a8r.io/dependencies: "None"
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: quote-cqrs
