emissary-ingress/emissary-config/7_auth_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-auth
spec:
  type: ClusterIP
  selector:
    app: example-auth
  ports:
    - port: 3000
      name: http-example-auth
      targetPort: http-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-auth
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: example-auth
    spec:
      containers:
        - name: example-auth
          image: docker.io/datawire/ambassador-auth-service:2.0.0
          livenessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 4
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 4
          ports:
            - name: http-api
              containerPort: 3000
          resources:
            limits:
              cpu: "0.1"
              memory: 100Mi


---
